Fix TSV issues, obsolete entry(TRM-28165) and lineage ids (TRM-28144)